--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="height: 22em;">
           <div class="card mb-4 shadow-sm">
             <img src="carrotcake.jpg" alt="Carrot Cake">
 
@@ -102,7 +102,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="height: 22em;">
           <div class="card mb-4 shadow-sm">
             <img src="chococake.jpg" alt="Chocolate Cake">
 
@@ -117,7 +117,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="height: 22em;">
           <div class="card mb-4 shadow-sm">
             <img src="strawbcake.jpg" alt="Strawberry Shortcake">
 
@@ -133,7 +133,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" style="height: 22em;">
           <div class="card mb-4 shadow-sm">
             <img src="vanillacake.jpg" alt="Vanilla Cake">
 
@@ -147,7 +147,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="height: 22em;">
           <div class="card mb-4 shadow-sm">
             <img src="cakepops.jpg" alt="Cake Pops">
 
@@ -164,7 +164,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" style="height: 22em;">
           <div class="card mb-4 shadow-sm">
             
 
